--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -6,6 +6,14 @@
     object-position: center;
 }
 
+.tamañoiconopdf{
+    width:10%;
+}
+
+.colorficha{
+    color:#FF2419
+}
+
 .animacion{
     transition: width 0.2s;
 
